fixed prettier errors in ej.json and removed unused values from file

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
@@ -3,7 +3,7 @@
 
   <div class="import-segment-body">
     <p class="ft-16-400 import-message">
-      {{ 'segments.import-segmemt.message.text' | translate }}
+      {{ 'segments.import-segment.message.text' | translate }}
     </p>
     <input accept=".json" type="file" multiple class="ft-14-400 file-input" (change)="uploadFile($event)" />
     <ng-container *ngIf="!isLoadingSegments$; else loadingSegmentState">
