--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-participants/experiment-participants.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-participants/experiment-participants.component.html
@@ -108,7 +108,7 @@
             <div class="no-include-message-container">
               <span
                 class="ft-14-600 no-include-message"
-                [innerHTML]="'home.new-experiment.participants.inital.include-message' | translate"
+                [innerHTML]="'home.new-experiment.participants.initial.include-message' | translate"
               ></span>
             </div>
           </ng-template>
@@ -131,7 +131,7 @@
       <span
         class="ft-14-600 validation-message"
         *ngIf="segmentNotValid"
-        [innerHTML]="'home.new-experiment.participants.unvalid-segment.text' | translate"
+        [innerHTML]="'home.new-experiment.participants.invalid-segment.text' | translate"
       ></span>
     </div>
     <br />
@@ -250,7 +250,7 @@
               <div class="no-exclude-message-container">
                 <span
                   class="ft-14-600 no-exclude-message"
-                  [innerHTML]="'home.new-experiment.participants.inital.exclude-message' | translate"
+                  [innerHTML]="'home.new-experiment.participants.initial.exclude-message' | translate"
                 ></span>
               </div>
             </ng-template>
@@ -265,7 +265,7 @@
       <span
         class="ft-14-600 validation-message"
         *ngIf="segmentNotValid2"
-        [innerHTML]="'home.new-experiment.participants.unvalid-segment.text' | translate"
+        [innerHTML]="'home.new-experiment.participants.invalid-segment.text' | translate"
       ></span>
     </div>
   </section>
