--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
@@ -162,7 +162,7 @@
               <div class="no-decision-point-message-container">
                 <span
                   class="ft-14-600 no-decision-point-message"
-                  [innerHTML]="'home.new-experiment.design.decision-point.inital.include-message' | translate"
+                  [innerHTML]="'home.new-experiment.design.decision-point.initial.include-message' | translate"
                 ></span>
               </div>
             </ng-template>
@@ -715,7 +715,7 @@
               <div class="no-factor-message-container">
                 <span
                   class="ft-14-600 no-factor-message"
-                  [innerHTML]="'home.new-experiment.design.factors.inital.include-message' | translate"
+                  [innerHTML]="'home.new-experiment.design.factors.initial.include-message' | translate"
                 ></span>
               </div>
             </ng-template>
