--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.html
@@ -88,7 +88,7 @@
                   >
                     <mat-select
                       class="ft-14-400"
-                      [placeholder]="'home.new-experiment.metrics.repeatedmeasure.placeholder.text' | translate | titlecase"
+                      [placeholder]="'home.new-experiment.metrics.repeated-measure.placeholder.text' | translate | titlecase"
                       formControlName="repeatedMeasure"
                     >
                       <div
