--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.html
@@ -60,7 +60,7 @@
       </ng-container>
 
       <ng-container matColumnDef="removeMember">
-        <mat-header-cell class="ft-12-600 import-csv" [ngClass]="{ 'disabled': !isImportMembervalid }" aria-hidden="true" (click)="fileInput.click()" *matHeaderCellDef>
+        <mat-header-cell class="ft-12-600 import-csv" [ngClass]="{ 'disabled': !isImportMemberValid }" aria-hidden="true" (click)="fileInput.click()" *matHeaderCellDef>
           <mat-icon class="upload-icon">
             upload_2
           </mat-icon>
@@ -70,7 +70,7 @@
             accept=".csv"
             type="file"
             #fileInput
-            [disabled]="!isImportMembervalid"
+            [disabled]="!isImportMemberValid"
             file-input
             (change)="onFileSelected($event)"
           />
