Remove the hasFooter flag

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.html
@@ -5,7 +5,7 @@
   <section class="content-container">
     <ng-content select="[content]"></ng-content>
   </section>
-  <section class="footer-container" *ngIf="hasFooter">
+  <section class="footer-container">
     <ng-content select="[footer]"></ng-content>
   </section>
 </div>
