✨ Merge release/v5.1 to dev (#1526)
* storing default condition payload values in db with conditions (#1309)

* storing default condition payload values in db with conditions

* version bump to v5.1.1

* code clean up review cmt

* removing old condition payload when new are added

* version bump to 5.1.1

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

* Bugfix/1365 assignedcondition null mark issue (#1366)

* proper null coalescing in mark call for assignedcondition

* make assignedCondition an optional value in MarkData object, as we can safely as assume null is the intended condition

* version bump

* 🐛 Hotfix: Fix for Exclusions logic(Simple & Within Subject Exps) and code optimization for mark call (#1324)

* bugfixes for exclusions logic and mark call opt

* removing extra call to fetch experiment

* Storing proper group exclusion and individual exclusion documents (#1343)

* correct group exclusion and individual exclusion docs with code optimization for assign call

* code optimizations for mark and assign call for exclusions

* resolved peer review comments for group exclusions bug

* version bump release branch

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

* Bugfix/1382 experiment type in assign response (#1384)

* add experimentType to IExperimentAssignmentv5 response

* changes to main.java

* remove extra ts lib experimentType logic

* spec update

* spec update dataservice

* version bump

* ✨ Enhancement: Update data CSV export format (#1378)

* bugfixes for exclusions logic and mark call opt

* correct group exclusion and individual exclusion docs with code optimization for assign call

* code optimizations for mark and assign call for exclusions

* updating data csv export format to capture each mark call

* resolve peer review comments to confirm workingGroup is defined

* fix for integration tes

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -10,6 +10,7 @@
           <ng-container>
             <mat-table
               class="decision-point-table"
+              [class.disabled]="!isExperimentEditable"
               [dataSource]="decisionPointDataSource"
               [formArrayName]="SIMPLE_EXP_CONSTANTS.FORM_CONTROL_NAMES.DECISION_POINTS_ARRAY"
               #decisionPointTable
@@ -34,11 +35,7 @@
                     </span>
                   </ng-container>
                   <ng-container *ngIf="(decisionPointsTableEditIndex$ | async) === groupIndex">
-                    <mat-form-field
-                      class="dense-2"
-                      appearance="outline"
-                      subscriptSizing="dynamic"
-                    >
+                    <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
                       <span
                         [matTooltip]="
                           decisionPoints.at(groupIndex).get(SIMPLE_EXP_CONSTANTS.FORM_CONTROL_NAMES.SITE).value
@@ -87,11 +84,7 @@
                     </span>
                   </ng-container>
                   <ng-container *ngIf="(decisionPointsTableEditIndex$ | async) === groupIndex">
-                    <mat-form-field
-                      class="dense-2"
-                      appearance="outline"
-                      subscriptSizing="dynamic"
-                    >
+                    <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
                       <span
                         [matTooltip]="
                           decisionPoints.at(groupIndex).get(SIMPLE_EXP_CONSTANTS.FORM_CONTROL_NAMES.TARGET).value
@@ -144,7 +137,10 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="
+                      ((isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex) ||
+                      !isExperimentEditable
+                    "
                     (click)="handleDecisionPointTableEditClick(rowIndex, rowData.getRawValue())"
                   >
                     <!-- Edit Icon -->
@@ -161,7 +157,10 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="
+                      ((isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex) ||
+                      !isExperimentEditable
+                    "
                     (click)="handleDecisionPointTableClearOrRemoveRow(rowIndex)"
                   >
                     <ng-container *ngIf="(decisionPointsTableEditIndex$ | async) !== rowIndex">
@@ -233,6 +232,7 @@
           <ng-container>
             <mat-table
               class="condition-table"
+              [class.disabled]="!isExperimentEditable"
               [dataSource]="conditionDataSource"
               [formArrayName]="SIMPLE_EXP_CONSTANTS.FORM_CONTROL_NAMES.CONDITIONS_ARRAY"
               #conditionTable
@@ -257,11 +257,7 @@
                     </span>
                   </ng-container>
                   <ng-container *ngIf="(conditionsTableEditIndex$ | async) === groupIndex">
-                    <mat-form-field
-                      class="dense-2"
-                      appearance="outline"
-                      subscriptSizing="dynamic"
-                    >
+                    <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
                       <span
                         [matTooltip]="
                           conditions.at(groupIndex).get(SIMPLE_EXP_CONSTANTS.FORM_CONTROL_NAMES.CONDITION_CODE).value
@@ -309,11 +305,7 @@
                     </div>
                   </ng-container>
                   <ng-container *ngIf="(conditionsTableEditIndex$ | async) === groupIndex">
-                    <mat-form-field
-                      class="dense-2"
-                      appearance="outline"
-                      subscriptSizing="dynamic"
-                    >
+                    <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
                       <input
                         class="ft-14-400 align-right"
                         type="number"
@@ -347,11 +339,7 @@
                     </span>
                   </ng-container>
                   <ng-container *ngIf="(conditionsTableEditIndex$ | async) === groupIndex">
-                    <mat-form-field
-                      class="dense-2"
-                      appearance="outline"
-                      subscriptSizing="dynamic"
-                    >
+                    <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
                       <input
                         class="ft-14-400"
                         matInput
@@ -371,7 +359,10 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (conditionsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="
+                      ((isFormLockedForEdit$ | async) && (conditionsTableEditIndex$ | async) !== rowIndex) ||
+                      !isExperimentEditable
+                    "
                     (click)="handleConditionTableEditClick(rowIndex, rowData.getRawValue())"
                   >
                     <!-- Edit Icon -->
@@ -388,7 +379,10 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (conditionsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="
+                      ((isFormLockedForEdit$ | async) && (conditionsTableEditIndex$ | async) !== rowIndex) ||
+                      !isExperimentEditable
+                    "
                     (click)="handleConditionTableClearOrRemoveRow(rowIndex)"
                   >
                     <ng-container *ngIf="(conditionsTableEditIndex$ | async) !== rowIndex">
@@ -445,9 +439,7 @@
           </div>
 
           <div *ngIf="decisionPoints.length && conditions.length">
-            <app-payloads-table
-              [experimentInfo]="experimentInfo">
-            </app-payloads-table>
+            <app-payloads-table [experimentInfo]="experimentInfo"> </app-payloads-table>
           </div>
         </section>
       </form>
@@ -491,8 +483,8 @@
         *ngIf="experimentInfo"
         mat-raised-button
         class="shared-modal--modal-btn default-button"
-        [class.default-button--disabled]="(isFormLockedForEdit$ | async) || !isExperimentEditable"
-        [disabled]="(isFormLockedForEdit$ | async) || !isExperimentEditable"
+        [class.default-button--disabled]="isFormLockedForEdit$ | async"
+        [disabled]="isFormLockedForEdit$ | async"
         (click)="emitEvent(NewExperimentDialogEvents.SAVE_DATA)"
       >
         {{ 'global.save.text' | translate }}
