--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
@@ -19,6 +19,14 @@
       justify-content: space-between;
     }
 
+    .decision-point-table,
+    .factor-table {
+      &.disabled {
+        opacity: 0.5;
+        cursor: default;
+      }
+    }
+
     .decision-point-table {
       max-height: 135px;
       overflow: auto;
@@ -124,7 +132,6 @@
 
       mat-icon {
         position: relative;
-        cursor: pointer;
 
         &.active {
           transform: rotate(90deg);
@@ -194,10 +201,6 @@
         height: 16px;
         font-size: var(--text-size-x-large);
         color: gray;
-
-        &:hover {
-          cursor: pointer;
-        }
       }
 
       mat-form-field {
@@ -278,7 +281,7 @@
       background-color: transparent;
       color: var(--blue);
       &--disabled {
-        color: var(--grey-6);
+        color: var(--light-blue);
       }
     }
   }
@@ -299,7 +302,6 @@
     margin-top: 5px;
     margin-bottom: 5px;
   }
-
 
   /* Remove arrows/spinners from input type number */
   input::-webkit-outer-spin-button,
