Add Common Page Styles

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header-container/common-details-page-header-container.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header-container/common-details-page-header-container.component.scss
@@ -1,8 +1,16 @@
 ::ng-deep .header-container {
-  .root-link {
-    text-decoration: none;
-    color: black;
+  margin-top: -25px; // drawer__main-content-header pushes the header down by 25px
+  height: 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .breadcrumb {
+    display: flex;
+    column-gap: 8px;
+
+    .root-link, .details-name {
+      color: var(--light-black);
+    }
   }
 }
-
-
