--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header-container/common-root-page-header-container.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header-container/common-root-page-header-container.component.scss
@@ -1,12 +1,17 @@
 ::ng-deep .header-container {
+  // TODO: Remove the drawer__main-content-header element from dashboard-root.component.html and update the existing root page styles (e.g., height and margin in home.component.scss)
+  margin-top: -25px; // drawer__main-content-header pushes the header down by 25px
+  height: 112px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   .title {
     margin-bottom: 0;
   }
-  
+
   .subtitle {
-    display: block;
+    margin-bottom: 0;
     color: var(--grey-3);
   }
 }
-
-
