--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-header/feature-flag-details-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-header/feature-flag-details-page-header.component.html
@@ -1,5 +1,5 @@
 <app-common-details-page-header-container
     rootName = "feature-flags.title.text"
-    detailsName = {{ flagName }}
+    [detailsName]="flagName"
     rootLink= "feature-flags.link.text"
 > </app-common-details-page-header-container>
