--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header-container/common-details-page-header-container.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header-container/common-details-page-header-container.component.html
@@ -1,6 +1,7 @@
 <ng-container class="header-container">
-  <h4 class="ft-16-400">
-    <a [routerLink]="['/', rootLink]" class="ft-16-400 root-link">{{ rootName | translate }} </a>
-    > <b> {{ detailsName | translate }} </b>
-  </h4>
+  <div class="ft-14-400 breadcrumb">
+    <a [routerLink]="['/', rootLink]" class="root-link">{{ rootName | translate }} </a>
+    >
+    <span class="details-name">{{ detailsName | translate }}</span>
+  </div>
 </ng-container>
