--- a/frontend/projects/upgrade/src/styles/variables.scss
+++ b/frontend/projects/upgrade/src/styles/variables.scss
@@ -1,4 +1,26 @@
 :root {
+  /* color variables (added for new design) */
+  --zircon: #f5f7fe;
+  --water: #f0f2f9;
+  --light-grey-2: #dce0e6;
+  --grey-3: #929fae; /* same as --grey-3 */
+  --dark-grey: #646e7b;
+  --darker-grey: #444e5b;
+  --light-black: #222b45; /* same as --black-2 */
+  --red-2: #ff3333;
+  --status-disabled: #ff9933;
+  --status-enabled: #3366ff;
+  --status-archived: #999999;
+  --status-global: #ff3333;
+  --status-unused: #999999;
+  --status-used: #3366ff;
+  --status-disabled-alpha: #ff99330c;
+  --status-enabled-alpha: #3366ff0c;
+  --status-archived-alpha: #9999990c;
+  --status-global-alpha: #ff33330c;
+  --status-unused-alpha: #9999990c;
+  --status-used-alpha: #3366ff0c;
+
   /* color variables */
   --blue: #3366ff;
   --light-blue: #7194ff;
