Rename components and class names to not include 'Container'

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.html
@@ -1,4 +1,4 @@
-<ng-container class="header-container">
+<ng-container class="header">
   <div class="ft-14-400 breadcrumb">
     <a [routerLink]="['/', rootLink]" class="root-link">{{ rootName | translate }} </a>
     >
