--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header/common-root-page-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page-header/common-root-page-header.component.scss
@@ -1,4 +1,4 @@
-::ng-deep .header-container {
+::ng-deep .header {
   // TODO: Remove the drawer__main-content-header element from dashboard-root.component.html and update the existing root page styles (e.g., height and margin in home.component.scss)
   margin-top: -25px; // drawer__main-content-header pushes the header down by 25px
   height: 112px;
