--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.html
@@ -1,11 +1,11 @@
-<div class="common-section-card-container">
-  <header class="header-container">
+<div class="common-section-card">
+  <header class="header">
     <ng-content select="[header]"></ng-content>
   </header>
-  <section class="content-container">
+  <section class="content">
     <ng-content select="[content]"></ng-content>
   </section>
-  <section class="footer-container">
+  <section class="footer">
     <ng-content select="[footer]"></ng-content>
   </section>
 </div>
