--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.scss
@@ -1,4 +1,4 @@
-::ng-deep .header-container {
+::ng-deep .header {
   margin-top: -25px; // drawer__main-content-header pushes the header down by 25px
   height: 64px;
   display: flex;
