--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
@@ -1,4 +1,4 @@
-::ng-deep .common-section-card-container {
+::ng-deep .common-section-card {
   width: 100%;
   border: 1px solid var(--light-grey);
   border-radius: 4px;
