burninate common section card list

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-page-content.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-page-content.component.html
@@ -1,3 +1,3 @@
-<app-common-section-card-list>
-    <div section-card>Hi I'm a section card 1</div>
-</app-common-section-card-list>
+<section>
+  <app-common-section-card section-card>Hi I'm a section card 1</app-common-section-card>
+</section>
