Remove the ghost header element from dashboard-root.component.html and adjust styles

--- a/frontend/projects/upgrade/src/app/features/dashboard/common/tabs-view.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/common/tabs-view.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   box-shadow: unset !important;
   background: unset !important;
-  padding: 0 2.75rem 2.75rem;
+  padding: 25px 2.75rem 2.75rem;
 
   .title {
     margin-bottom: 0;
