--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/profile-root/profile-root.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/profile-root/profile-root.component.scss
@@ -1,5 +1,5 @@
 @import '../../common/tabs-view.scss';
 
 .profile-container {
-  height: calc(100% - 25px); // Subtract header height
+  height: 100%;
 }
