--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.component.scss
@@ -3,7 +3,7 @@ $font-size-small: 15px;
 
 .segment-container {
   box-shadow: unset !important;
-  padding: 0 2.75rem 2.75rem;
+  padding: 25px 2.75rem 2.75rem;
 
   .segment-link {
     text-decoration: none;
