--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-page/common-page.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-page/common-page.component.scss
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: calc(100% - 25px); // Subtract theme selector's height
+  height: 100%;
   padding: 0 32px;
 }
