--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.html
@@ -41,8 +41,7 @@
       </div>
     </div>
   </mat-drawer>
-  <mat-drawer-content class="drawer__main-content">
-    <div class="drawer__main-content-header"></div>
+  <mat-drawer-content>
     <router-outlet></router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
