--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.scss
@@ -2,5 +2,5 @@
 @import '../../common/tabs-view.scss';
 
 .users-container {
-  height: calc(100% - 25px); // Subtract header height
+  height: 100%;
 }
