--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags-legacy/pages/view-feature-flag/view-feature-flag.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags-legacy/pages/view-feature-flag/view-feature-flag.component.scss
@@ -3,7 +3,7 @@ $font-size-small: 15px;
 
 .flag-container {
   box-shadow: unset !important;
-  padding: 0 2.75rem 2.75rem;
+  padding: 25px 2.75rem 2.75rem;
 
   .flag-link {
     text-decoration: none;
