--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -2,7 +2,7 @@ $dark-grey-text-color: #646e7b;
 $font-size-small: 15px;
 
 .experiment-container {
-  padding: 0 2.75rem 2.75rem;
+  padding: 25px 2.75rem 2.75rem;
   box-shadow: 0px 0px #888888 !important;
 
   .experiment-link {
