remove content component from the feature-flags pages

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
@@ -1,4 +1,4 @@
 <app-common-page>
   <app-feature-flag-root-page-header header></app-feature-flag-root-page-header>
-  <app-feature-flag-root-page-content content></app-feature-flag-root-page-content>
+  <div section-card>hi i'm the future place for a table section card!</div>
 </app-common-page>
