--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.html
@@ -1,6 +1,11 @@
 <div class="common-section-card">
   <header class="header">
-    <ng-content select="[header]"></ng-content>
+    <div class="header-left">
+      <ng-content select="[header-left]"></ng-content>
+    </div>
+    <div class="header-right">
+      <ng-content select="[header-right]"></ng-content>
+    </div>
   </header>
   <section class="content">
     <ng-content select="[content]"></ng-content>
