forgot to rename the actual content slot name from content to section card

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
@@ -1,4 +1,4 @@
 <app-common-page>
   <app-feature-flag-root-page-header header></app-feature-flag-root-page-header>
-  <app-feature-flag-root-section-card content></app-feature-flag-root-section-card>
+  <app-feature-flag-root-section-card section-card></app-feature-flag-root-section-card>
 </app-common-page>
