--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
@@ -1,17 +1,28 @@
 <mat-card appearance="raised" class="metrics-container">
   <div class="header">
-    <mat-form-field
-      class="dense-2"
-      subscriptSizing="dynamic"
-    >
-      <input
-        class="ft-14-400 search-input"
-        matInput
-        (keyup)="applyFilter($event.target.value)"
-        [placeholder]="'global.search.text' | translate"
-      />
-      <mat-icon class="search-icon" matSuffix>search</mat-icon>
-    </mat-form-field>
+    <div class="input-fields">
+      <mat-form-field class="dense-2 filter-options" subscriptSizing="dynamic">
+        <mat-select
+          class="ft-14-400"
+          [(ngModel)]="selectedExperimentFilterOption"
+          (selectionChange)="applyFilter(selectedExperimentFilterOption)"
+        >
+          <mat-option class="ft-14-400" *ngFor="let context of experimentFilterOptions" [value]="context">
+            {{ context | titlecase }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="dense-2" subscriptSizing="dynamic">
+        <input
+          class="ft-14-400 search-input"
+          matInput
+          (keyup)="applyFilter($event.target.value)"
+          [placeholder]="'global.search.text' | translate"
+        />
+        <mat-icon class="search-icon" matSuffix>search</mat-icon>
+      </mat-form-field>
+    </div>
+
     <button
       mat-flat-button
       color="primary"
@@ -32,12 +43,20 @@
   <div #metricsTable class="metrics-table-container">
     <ng-container *ngIf="allMetrics.data?.length; else zeroState">
       <table mat-table [dataSource]="allMetrics">
-        <!-- ID Column -->
-        <ng-container matColumnDef="id">
+        <!-- Context Column -->
+        <ng-container matColumnDef="context">
           <th mat-header-cell *matHeaderCellDef class="ft-12-700">
-            {{ 'query.table-id.text' | translate }}
+            {{ 'query.table-context.text' | translate }}
           </th>
-          <td class="ft-12-600" mat-cell *matCellDef="let element; let index = index">{{ index + 1 }}</td>
+          <td class="ft-12-600" mat-cell *matCellDef="let element">
+            <mat-chip-row *ngFor="let contextTag of element.context">
+              <!-- <ng-container *ngIf="selectedMetricIndex !== index; else metricTreeTemplate"> -->
+              <span class="ft-12-600 chip-label">
+                {{ contextTag }}
+              </span>
+              <!-- </ng-container> -->
+            </mat-chip-row>
+          </td>
         </ng-container>
 
         <!-- Metric Column -->
@@ -45,51 +64,37 @@
           <th mat-header-cell *matHeaderCellDef class="ft-12-700">
             {{ 'query.metric.text' | translate }}
           </th>
-          <td class="ft-12-600" mat-cell *matCellDef="let element; let index = index">
-            <ng-container *ngIf="selectedMetricIndex !== index; else metricTreeTemplate">
-              <button mat-icon-button (click)="setTreeForMetric(index)">
-                <mat-icon class="mat-icon-rtl-mirror">chevron_right</mat-icon>
-              </button>
-              <span>{{ element.key }}</span>
-            </ng-container>
-            <ng-template #metricTreeTemplate>
-              <mat-tree
-                [dataSource]="nestedDataSource"
-                [treeControl]="nestedTreeControl"
-                class="node-tree mat-tree-position"
-              >
-                <!-- Without Children -->
-                <mat-tree-node *matTreeNodeDef="let node">
-                  <li class="mat-tree-node">
-                    <button mat-icon-button disabled></button>
-                    <span class="ft-14-600">{{ node.key }}</span>
-                    <mat-icon *ngIf="permissions.metrics.delete && keyEditMode" class="icon" (click)="deleteNode(node)"
-                      >delete_outline</mat-icon
-                    >
-                  </li>
-                </mat-tree-node>
-
-                <!-- With Children -->
-                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
-                  <li>
-                    <button mat-icon-button matTreeNodeToggle>
-                      <mat-icon class="mat-icon-rtl-mirror">
-                        {{ nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
-                      </mat-icon>
-                    </button>
-                    <span class="ft-14-600">
-                      {{ node.key }}
-                    </span>
-                    <mat-icon *ngIf="permissions.metrics.delete && keyEditMode" class="icon" (click)="deleteNode(node)"
-                      >delete_outline</mat-icon
-                    >
-                    <ul [class.node-tree-invisible]="!nestedTreeControl.isExpanded(node)">
-                      <ng-container matTreeNodeOutlet></ng-container>
-                    </ul>
-                  </li>
-                </mat-nested-tree-node>
-              </mat-tree>
-            </ng-template>
+          <td class="ft-12-600" mat-cell *matCellDef="let element">
+            <!-- {{ element.key }} -->
+            <mat-tree [dataSource]="[element]" [treeControl]="nestedTreeControl" class="example-tree">
+              <!-- This is the tree node template for leaf nodes -->
+              <mat-tree-node *matTreeNodeDef="let node; let index = index">
+                <button mat-icon-button disabled class="button-container">
+                  <!-- <mat-icon class="mat-icon-rtl-mirror"> chevron_right </mat-icon> -->
+                </button>
+                {{ node.key }}
+                <mat-icon *ngIf="permissions.metrics.delete && keyEditMode" class="icon" (click)="deleteNode(node)">
+                  delete_outline
+                </mat-icon>
+              </mat-tree-node>
+              <!-- This is the tree node template for expandable nodes -->
+              <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
+                <div class="mat-tree-node">
+                  <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.key">
+                    <mat-icon class="mat-icon-rtl-mirror">
+                      {{ nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
+                    </mat-icon>
+                  </button>
+                  {{ node.key }}
+                  <mat-icon *ngIf="permissions.metrics.delete && keyEditMode" class="icon" (click)="deleteNode(node)"
+                    >delete_outline</mat-icon
+                  >
+                </div>
+                <div [class.example-tree-invisible]="!nestedTreeControl.isExpanded(node)" role="group">
+                  <ng-container matTreeNodeOutlet></ng-container>
+                </div>
+              </mat-nested-tree-node>
+            </mat-tree>
           </td>
         </ng-container>
 
