Feature flag admin endpoints (#1474)
* WIP: Feature flag admin endpoints

* update feature flag service tests

* review changes

* merge dev into feature/feature-flag-admin-api

* review changes

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-header/feature-flag-details-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-header/feature-flag-details-page-header.component.html
@@ -1,6 +1,2 @@
-<app-common-details-page-header
-  rootName="feature-flags.title.text"
-  [detailsName]="flagName"
-  rootLink="featureflags"
->
+<app-common-details-page-header rootName="feature-flags.title.text" [detailsName]="flagName" rootLink="featureflags">
 </app-common-details-page-header>
